logs/mrsd_ros_tutorials/build.make.276.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::transformCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:152:10: error: ‘pcl_ros’ has not been declared
     bool pcl_ros::transformPointCloud ("apriltag_frame", *kinect_color_pc,*cloud_transformed, tf_listener);
          ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:152:39: error: invalid use of qualified-name ‘<declaration error>::transformPointCloud’
     bool pcl_ros::transformPointCloud ("apriltag_frame", *kinect_color_pc,*cloud_transformed, tf_listener);
                                       ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
